--- a/Module_7_File_File_read_write_append_file_pointer_exception_exception_handle.ipynb
+++ b/Module_7_File_File_read_write_append_file_pointer_exception_exception_handle.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCrCzavoaUe2X46upjyYvj",
+      "authorship_tag": "ABX9TyP+SB7Th6odjnFWtZ9lHELE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -920,7 +920,7 @@
       "metadata": {
         "id": "8iQADRUuY_v6"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -940,9 +940,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lzf13Smsg5EA",
-        "outputId": "09155297-647f-41d0-82dd-b771ad0047e1"
+        "outputId": "24b2ca35-c368-4ae0-81bc-0408759c6bbd"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -969,15 +969,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gr-OkPGNhcRB",
-        "outputId": "60a06949-39a6-4036-c2a4-538419f27310"
+        "outputId": "41609978-6e26-40f5-ce35-8ae2333d85be"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['sarah.connor@gmail.com\\n', 'michael_brown@outlook.com\\n', 'alex.taylor@gmail.com\\n', 'john.doe@example.com\\n', 'jane.smith@gmail.com\\n', 'robert.king@company.org\\n', 'emily.jones@yahoo.com\\n']\n",
+            "['jane.smith@gmail.com\\n', 'michael_brown@outlook.com\\n', 'alex.taylor@gmail.com\\n', 'robert.king@company.org\\n', 'sarah.connor@gmail.com\\n', 'john.doe@example.com\\n', 'emily.jones@yahoo.com\\n']\n",
             "7\n"
           ]
         }
@@ -986,12 +986,39 @@
     {
       "cell_type": "code",
       "source": [
-        "# sorting them alphabetically\n"
+        "# sorting them alphabetically\n",
+        "emails_list.sort()\n",
+        "print(emails_list)\n"
       ],
       "metadata": {
-        "id": "JNNDfY3XiqpC"
+        "id": "JNNDfY3XiqpC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "904a060f-b3bf-4d2c-a215-875ef45925cd"
       },
-      "execution_count": null,
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['alex.taylor@gmail.com\\n', 'emily.jones@yahoo.com\\n', 'jane.smith@gmail.com\\n', 'john.doe@example.com\\n', 'michael_brown@outlook.com\\n', 'robert.king@company.org\\n', 'sarah.connor@gmail.com\\n']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"unique_emails.txt\" , 'a+') as file :\n",
+        "  for i in emails_list :\n",
+        "    file.write(i)\n"
+      ],
+      "metadata": {
+        "id": "BtcoppRNv1Kb"
+      },
+      "execution_count": 12,
       "outputs": []
     }
   ]
